--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 <body>
 	<div class="container">
 		<h1><%= title %></h1>
+		<a href="/todo">Single Page Todo</a>
 		<ul>
 			<% for (var i = 0; i < items.length; i++)
 			{ %>
